--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,10 @@ libraries:
 - name: jinja2
   version: latest
 
+# image files
+- url: /Images/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+  static_files: static/\1
+  upload: static/(.*\.(bmp|gif|ico|jpeg|jpg|png))
 
 skip_files:
 # Default patterns skipped by App Engine, which must be repeated since
