--- a/app.yaml
+++ b/app.yaml
@@ -19,7 +19,7 @@ libraries:
   version: latest
 
 # image files
-- url: /Images/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+#- url: /Images/(.*\.(bmp|gif|ico|jpeg|jpg|png))
 #  static_files: static/\1
 #  upload: static/(.*\.(bmp|gif|ico|jpeg|jpg|png))
 
