--- a/app.yaml
+++ b/app.yaml
@@ -9,16 +9,17 @@ handlers:
   static_dir: static
   secure: always
 
-- url: /
-  static_files: LyonTracks/index.html
-  upload: LyonTracks/index.html
-
-- url: /
-  static_dir: LyonTracks/
+#- url: /
+#  static_files: LyonTracks/index.html
+#  upload: LyonTracks/index.html
+#
+#- url: /
+#  static_dir: LyonTracks/
 
 - url: /.*
   script: main.app
   secure: always
+
 
 
 libraries:
